--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -89,9 +89,9 @@ plugin = ["mlua"]
 # install path dx and dioxus as the same command
 # so, they're not really aliases
 # eventually dx will defer to the right version of dioxus
-[[bin]]
-path = "src/main.rs"
-name = "dioxus"
+#[[bin]]
+#path = "src/main.rs"
+#name = "dioxus"
 
 [[bin]]
 path = "src/main.rs"
