--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -81,6 +81,8 @@ rsx-rosetta = { workspace = true }
 dioxus-rsx = { workspace = true }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
+lightningcss = "1.0.0-alpha.44"
+minify-js = "0.5.6"
 
 [features]
 default = []
