--- a/.github/workflows/cli_release.yml
+++ b/.github/workflows/cli_release.yml
@@ -32,9 +32,7 @@ jobs:
               name: dx-x86_64-unknown-linux-gnu.tar.gz,
             }
     steps:
-      - name: echo workspace
-        if: matrix.platform.os != 'windows-latest'
-        run: echo ${{github.workspace}}
+      - uses: actions/checkout@v3
       - name: install stable
         uses: actions-rs/toolchain@v1
         with:
