--- a/.github/workflows/cli_release.yml
+++ b/.github/workflows/cli_release.yml
@@ -83,14 +83,14 @@ jobs:
         uses: actions/download-artifact@v2
 
       - name: Write checksums
-        run: for file in dx-*\dx-*; do openssl dgst -sha256 -r "$file" | awk '{print $1}' > "${file}.sha256"; done
+        run: for file in dx-*/dx-*; do openssl dgst -sha256 -r "$file" | awk '{print $1}' > "${file}.sha256"; done
 
       - name: Upload artifacts and checksums
         if: github.event_name == 'release'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for file in dx-*\*; do
+          for file in dx-*/dx-*; do
             echo "Uploading $file"
             gh release upload ${{ github.event.release.tag_name }} "$file" "${file}.sha256"
           done
