--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,10 +24,11 @@ jobs:
         with:
           node-version: 16
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          targets: wasm32-unknown-unknown
       - uses: Swatinem/rust-cache@v2
-      - name: Install WASM toolchain
-        run: rustup target add wasm32-unknown-unknown
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright
