forgot cargo.toml

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -101,7 +101,8 @@ name = "dx"
 tempfile = "3.3"
 
 [package.metadata.binstall]
-pkg-url = "{ repo }/releases/download/v{ version }/dx-{ target }{ archive-suffix }"
+# '{ tagName }' will be replaced in the CI with the actual tag of the release
+pkg-url = "{ repo }/releases/download/{ tagName }/dx-{ target }{ archive-suffix }"
 
 [package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
 pkg-fmt = "zip"
