--- a/.github/workflows/cli_release.yml
+++ b/.github/workflows/cli_release.yml
@@ -53,7 +53,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add packages/cli/Cargo.toml
-          git commit -m "Update pkg-url to ${{ github.event.release.tag_name }}" --author $author
+          git commit -m "Update pkg-url to ${{ github.event.release.tag_name }}" --author "$author"
           git push -f origin ${{ github.ref }}
 
       # This neat action can build and upload the binary in one go!
