--- a/.github/workflows/cli_release.yml
+++ b/.github/workflows/cli_release.yml
@@ -54,7 +54,8 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git add packages/cli/Cargo.toml
           git commit -m "Update pkg-url to ${{ github.event.release.tag_name }}" --author "$author"
-          git push -f origin ${{ github.ref }}
+          git tag -fa ${{ github.event.release.tag_name }}
+          git push origin --tags --force
 
       # This neat action can build and upload the binary in one go!
       - name: Build and upload binary
