--- a/.github/workflows/cli_release.yml
+++ b/.github/workflows/cli_release.yml
@@ -43,18 +43,16 @@ jobs:
           workspaces: packages/cli -> ../../target
 
       # Replace the tag for the cargo-binstall record with the current release tag
-      - name: Replace pkg-url in Cargo.toml
-        run: |
-          sed -i 's/{ tagName }/${{ github.event.release.tag_name }}/g' packages/cli/Cargo.toml
-      - name: Commit and push changes to tag # Only run on Linux
+      - name: Replace pkg-url in Cargo.toml and push changes to tag # Only run on Linux
         if: ${{matrix.platform.target == 'x86_64-unknown-linux-gnu'}}
         run: |
+          sed -i 's/{ tagName }/${{ github.event.release.tag_name }}/g' packages/cli/Cargo.toml
           author="$(git log -1 --pretty=format:'%an <%ae>')"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add packages/cli/Cargo.toml
           git commit -m "Update pkg-url to ${{ github.event.release.tag_name }}" --author "$author"
-          git tag -fa ${{ github.event.release.tag_name }}
+          git tag -fa ${{ github.event.release.tag_name }} -m "Update pkg-url to ${{ github.event.release.tag_name }}"
           git push origin --tags --force
 
       # This neat action can build and upload the binary in one go!
