get release body from github cli

--- a/.github/workflows/cli_release.yml
+++ b/.github/workflows/cli_release.yml
@@ -49,12 +49,15 @@ jobs:
           # Replace the tag for the cargo-binstall record with the current release tag
           sed -i 's/\/{ tagName }\//\/${{ github.event.release.tag_name }}\//g' packages/cli/Cargo.toml
 
+          # Get release body from GitHub CLI
+          release_body=$(gh release view ${{ github.event.release.tag_name }} --json body --jq '.body')
+
           # Commit and push the changes to the tag
-          # git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com" # This is a dummy email, copied from https://github.com/stefanzweifel/git-auto-commit-action
-          # git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com" # This is a dummy email, copied from https://github.com/stefanzweifel/git-auto-commit-action
+          git config --local user.name "github-actions[bot]"
           git add packages/cli/Cargo.toml
           git commit -m "Update pkg-url to ${{ github.event.release.tag_name }}"
-          git tag -fa ${{ github.event.release.tag_name }} -m "Update pkg-url to ${{ github.event.release.tag_name }}"
+          git tag -fa ${{ github.event.release.tag_name }} -m "$release_body"
           git push origin --tags --force
 
       # This neat action can build and upload the binary in one go!
