--- a/.github/workflows/cli_release.yml
+++ b/.github/workflows/cli_release.yml
@@ -45,6 +45,8 @@ jobs:
       # Replace the tag for the cargo-binstall record with the current release tag
       - name: Replace pkg-url in Cargo.toml and push changes to tag # Only run on Linux
         if: ${{matrix.platform.target == 'x86_64-unknown-linux-gnu'}}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           # Replace the tag for the cargo-binstall record with the current release tag
           sed -i 's/\/{ tagName }\//\/${{ github.event.release.tag_name }}\//g' packages/cli/Cargo.toml
