--- a/packages/router/Cargo.toml
+++ b/packages/router/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = { workspace = true }
 futures-util = { workspace = true }
 urlencoding = "2.1.3"
 serde = { version = "1", features = ["derive"], optional = true }
+serde_json = { version = "1.0.91", optional = true }
 url = "2.3.1"
 wasm-bindgen = { workspace = true, optional = true }
 web-sys = { version = "0.3.60", optional = true, features = [
@@ -33,7 +34,7 @@ tokio = { workspace = true, features = ["full"], optional = true }
 [features]
 default = ["web"]
 ssr = ["dioxus-ssr", "tokio"]
-liveview = ["dioxus-liveview", "tokio"]
+liveview = ["dioxus-liveview", "tokio", "dep:serde", "serde_json"]
 wasm_test = []
 serde = ["dep:serde", "gloo-utils/serde"]
 web = ["gloo", "web-sys", "wasm-bindgen", "gloo-utils", "js-sys"]
