--- a/packages/hot-reload/Cargo.toml
+++ b/packages/hot-reload/Cargo.toml
@@ -26,5 +26,5 @@ ignore = { version = "0.4.19", optional = true }
 [features]
 default = ["web"]
 web = ["dep:dioxus-html"]
-native_file_watcher = ["ignore", "chrono", "notify", "execute", "once_cell", "ignore"]
-file_watcher = ["web", "native_file_watcher", "dioxus-html/hot-reload-context"]
+custom_file_watcher = ["ignore", "chrono", "notify", "execute", "once_cell", "ignore"]
+file_watcher = ["web", "custom_file_watcher", "dioxus-html/hot-reload-context"]
