--- a/packages/hooks/Cargo.toml
+++ b/packages/hooks/Cargo.toml
@@ -20,6 +20,7 @@ tracing = { workspace = true }
 thiserror = { workspace = true }
 slab = { workspace = true }
 dioxus-debug-cell = "0.1.1"
+async-std = "1.12.0"
 
 [dev-dependencies]
 futures-util = { workspace = true, default-features = false }
