--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -75,13 +75,13 @@ toml_edit = "0.19.11"
 tauri-bundler = { version = "=1.3.0", features = ["native-tls-vendored"] }
 tauri-utils = "=1.4.*"
 
-dioxus-autofmt = { workspace = true }
-dioxus-check = { workspace = true }
-rsx-rosetta = { workspace = true }
-dioxus-rsx = { workspace = true }
-dioxus-html = { workspace = true, features = ["hot-reload-context"] }
-dioxus-core = { workspace = true, features = ["serialize"] }
-dioxus-hot-reload = { workspace = true }
+dioxus-autofmt = { workspace = true, version = "0.4.2" }
+dioxus-check = { workspace = true, version = "0.4.2" }
+rsx-rosetta = { workspace = true, version = "0.4.2" }
+dioxus-rsx = { workspace = true, version = "0.4.2" }
+dioxus-html = { workspace = true, features = ["hot-reload-context"], version = "0.4.2" }
+dioxus-core = { workspace = true, features = ["serialize"], version = "0.4.2" }
+dioxus-hot-reload = { workspace = true, version = "0.4.2" }
 interprocess-docfix = { version = "1.2.2" }
 
 [features]
