--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -35,10 +35,10 @@ serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
-dioxus = { workspace = true }
+dioxus = { workspace = true, version = "0.4.2" }
 pretty_assertions = "1.3.0"
 rand = "0.8.5"
-dioxus-ssr = { workspace = true }
+dioxus-ssr = { workspace = true, version = "0.4.2" }
 trybuild = "1.0"
 
 [features]
