--- a/packages/dioxus-tui/Cargo.toml
+++ b/packages/dioxus-tui/Cargo.toml
@@ -10,11 +10,11 @@ keywords = ["dom", "ui", "gui", "react", "terminal"]
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-dioxus-core = { workspace = true, features = ["serialize"] }
-dioxus-html = { workspace = true }
-dioxus-native-core = { workspace = true, features = ["dioxus"] }
-dioxus-native-core-macro = { workspace = true }
-dioxus-hot-reload = { workspace = true, optional = true }
+dioxus-core = { workspace = true, version = "0.4.2", features = ["serialize"] }
+dioxus-html = { workspace = true, version = "0.4.2" }
+dioxus-native-core = { workspace = true, version = "0.4.2", features = ["dioxus"] }
+dioxus-native-core-macro = { workspace = true, version = "0.4.2" }
+dioxus-hot-reload = { workspace = true, version = "0.4.2", optional = true }
 plasmo = { workspace = true }
 
 crossterm = "0.26.0"
@@ -23,7 +23,7 @@ futures = "0.3.19"
 taffy = "0.3.12"
 
 [dev-dependencies]
-dioxus = { workspace = true }
+dioxus = { workspace = true, version = "0.4.2" }
 tokio = { version = "1" }
 criterion = "0.3.5"
 
