--- a/packages/dioxus/Cargo.toml
+++ b/packages/dioxus/Cargo.toml
@@ -11,14 +11,14 @@ keywords = ["dom", "ui", "gui", "react", "wasm"]
 rust-version = "1.65.0"
 
 [dependencies]
-dioxus-core = { workspace = true }
-dioxus-html = { workspace = true, optional = true }
-dioxus-core-macro = { workspace = true, optional = true }
-dioxus-hooks = { workspace = true, optional = true }
-dioxus-rsx = { workspace = true, optional = true }
+dioxus-core = { workspace = true, version = "0.4.2" }
+dioxus-html = { workspace = true, version = "0.4.2", optional = true }
+dioxus-core-macro = { workspace = true, version = "0.4.2", optional = true }
+dioxus-hooks = { workspace = true, version = "0.4.2", optional = true }
+dioxus-rsx = { workspace = true, version = "0.4.2", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-dioxus-hot-reload = { workspace = true, optional = true }
+dioxus-hot-reload = { workspace = true, version = "0.4.2", optional = true }
 
 [features]
 default = ["macro", "hooks", "html", "hot-reload"]
