--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -10,8 +10,8 @@ homepage = "https://dioxuslabs.com"
 keywords = ["dom", "ui", "gui", "react"]
 
 [dependencies]
-dioxus-core = { workspace = true }
-dioxus-rsx = { workspace = true, features = ["hot_reload"], optional = true }
+dioxus-core = { workspace = true, version = "0.4.2" }
+dioxus-rsx = { workspace = true, version = "0.4.2", features = ["hot_reload"], optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
 serde_repr = { version = "0.1", optional = true }
 wasm-bindgen = { workspace = true, optional = true }
