--- a/packages/mobile/Cargo.toml
+++ b/packages/mobile/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["dom", "ui", "gui", "react"]
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-dioxus-desktop = { workspace = true }
+dioxus-desktop = { workspace = true, version = "0.4.2" }
 
 [lib]
 doctest = false
