--- a/packages/rink/Cargo.toml
+++ b/packages/rink/Cargo.toml
@@ -10,9 +10,9 @@ keywords = ["dom", "ui", "gui", "react", "terminal"]
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-dioxus-html = { workspace = true }
-dioxus-native-core = { workspace = true, features = ["layout-attributes"] }
-dioxus-native-core-macro = { workspace = true }
+dioxus-html = { workspace = true, version = "0.4.2" }
+dioxus-native-core = { workspace = true, version = "0.4.2", features = ["layout-attributes"] }
+dioxus-native-core-macro = { workspace = true, version = "0.4.2" }
 
 tui = "0.17.0"
 crossterm = "0.26.1"
