--- a/packages/rsx-rosetta/Cargo.toml
+++ b/packages/rsx-rosetta/Cargo.toml
@@ -13,8 +13,8 @@ keywords = ["dom", "ui", "gui", "react"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus-autofmt = { workspace = true }
-dioxus-rsx = { workspace = true }
+dioxus-autofmt = { workspace = true, version = "0.4.2" }
+dioxus-rsx = { workspace = true, version = "0.4.2" }
 html_parser.workspace = true
 proc-macro2 = "1.0.49"
 quote = "1.0.23"
