--- a/packages/signals/Cargo.toml
+++ b/packages/signals/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus-core = { workspace = true }
+dioxus-core = { workspace = true, version = "0.4.2" }
 generational-box = { workspace = true }
 tracing = { workspace = true }
 simple_logger = "4.2.0"
 serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
-dioxus = { workspace = true }
-dioxus-desktop = { workspace = true }
+dioxus = { workspace = true, version = "0.4.2" }
+dioxus-desktop = { workspace = true, version = "0.4.2" }
 tokio = { version = "1", features = ["full"] }
 
 [features]
