--- a/packages/ssr/Cargo.toml
+++ b/packages/ssr/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/DioxusLabs/dioxus/"
 keywords = ["dom", "ui", "gui", "react", "ssr"]
 
 [dependencies]
-dioxus-core = { workspace = true, features = ["serialize"] }
+dioxus-core = { workspace = true, version = "0.4.2", features = ["serialize"] }
 askama_escape = "0.10.3"
 thiserror = "1.0.23"
 rustc-hash = "1.1.0"
@@ -19,7 +19,7 @@ http = "0.2.9"
 tokio = { version = "1.28", features = ["full"], optional = true }
 
 [dev-dependencies]
-dioxus = { workspace = true }
+dioxus = { workspace = true, version = "0.4.2" }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 fern = { version = "0.6.0", features = ["colored"] }
