--- a/packages/cli-plugin/Cargo.toml
+++ b/packages/cli-plugin/Cargo.toml
@@ -11,11 +11,11 @@ keywords = ["react", "gui", "cli", "dioxus", "wasm", "plugins"]
 [dependencies]
 inventory = "0.3.13"
 once_cell = "1.18.0"
-wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }
+wit-bindgen = "0.15.0"
 
 [dev-dependencies]
-wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ['component-model'] }
-wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", features = ['preview2'] }
+wasmtime = { version = "15.0.0", features = ['component-model'] }
+wasmtime-wasi = { version = "15.0.0", features = ['preview2'] }
 wit-component = "0.11.0"
 async-trait = "0.1.73"
 tokio = { workspace = true, features = ["full"] }
