add `dx plugin init`, need to save to disk after run

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -82,6 +82,7 @@ dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-hot-reload = { workspace = true }
 interprocess-docfix = { version = "1.2.2" }
+semver = "1.0.20"
 
 [features]
 default = []
