--- a/packages/rsx/Cargo.toml
+++ b/packages/rsx/Cargo.toml
@@ -23,7 +23,6 @@ krates = { version = "0.12.6", optional = true }
 tracing = { workspace = true }
 
 [features]
-default = ["html"]
+default = []
 hot_reload = ["krates", "internment", "dioxus-core"]
 serde = ["dep:serde"]
-html = []
