--- a/packages/fullstack/examples/cloudflare-workers-hello-world/wrangler.toml
+++ b/packages/fullstack/examples/cloudflare-workers-hello-world/wrangler.toml
@@ -5,4 +5,4 @@ main = "build/worker/shim.mjs"
 name = "worker"
 
 [build]
-command = "cargo install -q worker-build && worker-build --release --features server"
+command = "cargo install -q worker-build && worker-build --dev --features server"
