--- a/packages/fullstack/examples/cloudflare-workers-hello-world/package.json
+++ b/packages/fullstack/examples/cloudflare-workers-hello-world/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "serve": "concurrently \"npm run serve:web\" \"npm run serve:server\"",
     "serve:web": "dx serve --platform web --features web",
-    "serve:server": "wrangler dev"
+    "serve:server": "wrangler dev",
+    "build:server": "cargo install -q worker-build wasm-coredump-rewriter && cross-env COREDUMP=1 worker-build --dev --features server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "wrangler": "^3.28.1"
+  },
+  "dependencies": {
+    "@cloudflare/wasm-coredump": "^1.0.3"
   }
 }
