--- a/packages/fullstack/examples/cloudflare-workers-hello-world/Cargo.toml
+++ b/packages/fullstack/examples/cloudflare-workers-hello-world/Cargo.toml
@@ -36,6 +36,7 @@ simple_logger = "4.2.0"
 tracing-web = "0.1.3"
 tracing = { workspace = true }
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
+tracing-wasm = "0.2.1"
 console_error_panic_hook = "0.1.7"
 backtrace = "0.3"
 reqwest = "0.11.18"
